Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

Ver 4.97 (12/6/01)
- Turn  classes To_tds_edge_iterator and To_tds_face_iterator
 into  no longer nested classes of Triangulation_2.h. 
 The nested version did not compile on bcc

Ver 4.96 (11/6/01)
- readded a typedef for Triangulation suppressed by error
in Triangulation_finite_vertices_iterator_2

Ver 4.95 (11/6/01)
- Try to solve a VCC compilation problem around the Iterator_project
  for Point_iterator

Ver 4.94 (7/6/01)
- suppress the typedef Point in Triangulation_data_structure_using_list_2
- GCC 3.0 fixes.

Ver 4.93 (29/5/01)
- Triangulation_hierarchy doc fixes.
- Fixed a bug in Line_face_circulator and extend the testsuit

Ver 4.92 (21/5/01)
- add function star_hole in Triangulation_default_data_structure_2
  Triangulation_data_structure_using_list
  and Triangulation_2
- add a Point iterator to Triangulation_2

Ver 4.91 (16/5/01)
fixed previous unwanted change to Triangulation_2.h

Ver 4.90 (15/5/01)
fixed previous unwanted change to Triangulation_2.h

Ver 4.89 (15/5/01)
- add remove_constraint in Constrained_Delaunay_triangulation_2
- add is_contrained(Edge e), remove_incident_constraints(Vertex_handle v)
  are_there_incident_constraints(Vertex_handle v) in 
  Constrained_triangulation_2 and Constrained_Delaunay_triangulation_2

Ver 4.88 (14/5/01)
- fixed missind std:: in front of back_inserter

Ver 4.87 (7/5/01)
- default template parameters for Delaunay_triangulation_2.h
- added forgotten file Dummy_output_iterator.h

Ver 4.86 (2/5/01)
- unify find_conflics()t member functions of Delaunay and constrained Delaunay
triangulations
- introdubce new member functions Boundary_of_conflict_zone()
in Delaunay_triangulation_2 and Constrained_Delaunay_triangulation_2.h
- fixed the test of constrained and Delaunay constrained triangulations

Ver 4.85 (17/04/01)
- cleaned up Constrained_triangulation_2 and