@@ -58,7 +58,7 @@ The following predicates and constructor types are provided
 \ccGlue
 \ccNestedType{Side_of_oriented_circle_2}{}
 \ccGlue
-\ccNestedType{Less_distance_to_point_2}
+\ccNestedType{Compare_distance_2}
 \ccGlue
 \ccNestedType{Construct_circumcenter_2}{}
 \ccGlue
@@ -82,6 +82,8 @@ The following access functions are provided
 \ccGlue
 \ccMethod{Side_of_oriented_circle_2
           side_of_oriented_circle_2_object();}{}
+\ccGlue
+\ccMethod{Compare_distance_2 compare_distance_2_object();}{}
 \ccGlue
 \ccMethod{Construct_circumcenter_2 construct_circumcenter_2_object();}{}
 \ccGlue
