@@ -932,7 +932,7 @@ and \ccc{Ray_2} and the constructor objects
 are used to build the dual Voronoi diagram. Those types 
 are required only if the member functions relative to
 the dual diagrams  are called.
-At last, the traits provide a type \ccc{Less_distance_to_point_2} 
+At last, the traits provide a type \ccc{Compare_distance_2} 
 to compare the distances between a first point and two other
 given points. This type 
  is only required
