@@ -309,18 +309,29 @@ Delaunay_triangulation_2<Gt,Tds>::
 nearest_vertex_2D(const Point& p, Face_handle f) const
 {
   CGAL_triangulation_precondition(dimension() == 2);
-    if (f== Face_handle()) f = locate(p);
+  if (f== Face_handle()) f = locate(p);
   else
     CGAL_triangulation_precondition(oriented_side(f,p)!=ON_NEGATIVE_SIDE);
 
-  typename Geom_traits::Less_distance_to_point_2 
-    closer = geom_traits().less_distance_to_point_2_object(p);
+//   typename Geom_traits::Less_distance_to_point_2 
+//     closer = geom_traits().less_distance_to_point_2_object(p);
+//   Vertex_handle nn =  !is_infinite(f->vertex(0)) ? f->vertex(0):f->vertex(1);
+//   if ( !is_infinite(f->vertex(1))  && 
+//        closer(f->vertex(1)->point(), nn->point())) nn=f->vertex(1);
+//   if ( !is_infinite(f->vertex(2))  &&
+//        closer(f->vertex(2)->point(), nn->point())) nn=f->vertex(2);
+  typename Geom_traits::Compare_distance_2 
+    closer =  geom_traits().compare_distance_2_object(p);
   Vertex_handle nn =  !is_infinite(f->vertex(0)) ? f->vertex(0):f->vertex(1);
-  if ( !is_infinite(f->vertex(1))  && 
-       closer(f->vertex(1)->point(), nn->point())) nn=f->vertex(1);
-  if ( !is_infinite(f->vertex(2))  &&
-       closer(f->vertex(2)->point(), nn->point())) nn=f->vertex(2);
- 
+  if ( !is_infinite(f->vertex(1)) && closer(p,
+					    f->vertex(1)->point(),
+					    nn->point())) 
+    nn=f->vertex(1);
+  if ( !is_infinite(f->vertex(2)) && closer(p,
+					    f->vertex(2)->point(), 
+					    nn->point())) 
+    nn=f->vertex(2);
+       
   look_nearest_neighbor(p,f,0,nn);
   look_nearest_neighbor(p,f,1,nn);
   look_nearest_neighbor(p,f,2,nn);
@@ -332,15 +343,16 @@ Delaunay_triangulation_2<Gt,Tds>::Vertex_handle
 Delaunay_triangulation_2<Gt,Tds>:: 
 nearest_vertex_1D(const Point& p) const
 {
-  typename Geom_traits::Less_distance_to_point_2 
-    closer=geom_traits().less_distance_to_point_2_object(p);
-  
+ //  typename Geom_traits::Less_distance_to_point_2 
+//     closer=geom_traits().less_distance_to_point_2_object(p);
+  typename Geom_traits::Compare_distance_2 
+    closer =  geom_traits().compare_distance_2_object();
   Vertex_handle nn;
   
   Finite_vertices_iterator vit=finite_vertices_begin();
   nn = vit->handle();
   for ( ; vit != finite_vertices_end(); ++vit){
-    if (closer(vit->point(), nn->point()) ) nn=vit->handle();
+    if (closer(p, vit->point(), nn->point()) ) nn=vit->handle();
   } 
   return nn;
 }
@@ -356,11 +368,13 @@ look_nearest_neighbor(const Point& p,
   Face_handle  ni=f->neighbor(i);
   if ( ON_POSITIVE_SIDE != side_of_oriented_circle(ni,p) ) return;
 
-  typename Geom_traits::Less_distance_to_point_2 
-    closer=geom_traits().less_distance_to_point_2_object(p);
+//   typename Geom_traits::Less_distance_to_point_2 
+//     closer=geom_traits().less_distance_to_point_2_object(p);
+  typename Geom_traits::Compare_distance_2 
+    closer =  geom_traits().compare_distance_2_object();
   i = ni->index(f);
   if ( !is_infinite(ni->vertex(i)) &&
-       closer(ni->vertex(i)->point(), nn->point()) )  nn=ni->vertex(i);
+       closer(p, ni->vertex(i)->point(), nn->point()) )  nn=ni->vertex(i);
     
   // recursive exploration of triangles whose circumcircle contains p
   look_nearest_neighbor(p, ni, ccw(i), nn);
