@@ -2,6 +2,7 @@ Package triangulation: provides triangulations Delaunay triangulations,
 constrained and regular triangulations with  tests and examples.
 
 Ver 4.97 (12/6/01)
+- replace Less_distance_to_Point_2 by Compare_distance_2
 - Turn  classes To_tds_edge_iterator and To_tds_face_iterator
  into  no longer nested classes of Triangulation_2.h. 
  The nested version did not compile on bcc
